--- a/frontend/src/styles/Sidebar.css
+++ b/frontend/src/styles/Sidebar.css
@@ -23,7 +23,8 @@
 	transition: color 0.3s ease-in-out;
 }
 
-.sidebar li a:hover {
+.sidebar li a:hover,
+.sidebar li a.active {
 	color: var(--accent-color);
 }
 
